--- a/evotor-rest-api.yaml
+++ b/evotor-rest-api.yaml
@@ -8,11 +8,19 @@ tags:
   - name: Товары и документы
     description:
       Запросы информации об определённом магазине (`storeUuid`) пользователя платформы Эвотор.
+  - name: Вебхуки-запросы
+    description:
+      Запросы к стороннему сервису. Облако Эвотор ожидает подтверждения этих запросов. Время ожидания -- 10 секунд.
+  - name: Вебхуки-уведомления
+    description:
+      События, на которые сторонний сервис может подписаться. Облако Эвотор не ожидает ответа на эти события
 produces:
     - application/json
 consumes:
     - application/json
-host: api.evotor.ru
+x-servers:
+  - url: //
+    description: 'Веб-адрес запроса:'
 schemes:
     - https
 paths:
