--- a/evotorCallbacks/paths.yaml
+++ b/evotorCallbacks/paths.yaml
@@ -27,10 +27,8 @@
             - token
           properties:
             userUuid:
-              type: string
-              description: Уникальный идентификатор пользователя в платформе Эвотор.
-              pattern: '^[0-9]{2}-[0-9]{15}$'
-              default: 01-000000000000001
+              allOf:
+                - $ref: ../definitions.yaml#/userId
             hasBilling:
               type: boolean
               description: |
@@ -82,10 +80,8 @@
             - token
           properties:
             userUuid:
-              type: string
-              description: Уникальный идентификатор пользователя в платформе Эвотор
-              pattern: '^[0-9]{2}-[0-9]{15}$'
-              default: 01-000000000000001
+              allOf:
+                - $ref: ../definitions.yaml#/userId
             token:
               description: |
                 Токен, который облако Эвотор будет передавать в заголове `Authorization` с типом `Bearer`, для авторизации своих HTTP-запросов в стороннем сервисе.
@@ -126,10 +122,8 @@
             - status
           properties:
             userUuid:
-              type: string
-              description: Уникальный идентификатор пользователя в платформе Эвотор.
-              pattern: '^[0-9]{2}-[0-9]{15}$'
-              default: 01-000000000000001
+              allOf:
+                - $ref: ../definitions.yaml#/userId
             tariffId:
               type: string
               description: Код тарифа в платформе Эвотор.
@@ -527,7 +521,8 @@
             - token
           properties:
             userUuid:
-              $ref: ../definitions.yaml#/registerFormData/properties/userUuid
+              allOf:
+                - $ref: ../definitions.yaml#/userId
             token:
               type: string
               description: Токен приложения.
@@ -545,3 +540,17 @@
         $ref: ../responses.yaml#/404
       '405':
         $ref: ../responses.yaml#/4051005
+/api/v1/user/event:
+  post:
+    tags:
+      - Биллинг
+    summary: События биллинга
+    description: |
+       Связанные с биллингом события, которые облако Эвотор передаёт в сторонний сервис.
+    parameters:
+      - in: body
+        name: body
+        description: Содержимое запроса меняется в зависимости от события.
+        required: true
+        schema:
+          $ref: ../definitions.yaml#/events
