--- a/evotorRestApi/paths.yaml
+++ b/evotorRestApi/paths.yaml
@@ -549,7 +549,7 @@ partner.ru/api/v1/inventories/stores:
         $ref: ../responses.yaml#/404
       '405':
         $ref: ../responses.yaml#/4051005
-partner.ru/api/v1/receipt:
+partner.ru/api/v1/receipts:
   post:
     tags:
       - Вебхуки-уведомления
