--- a/definitions.yaml
+++ b/definitions.yaml
@@ -37,6 +37,8 @@ registerFormData:
 
         > Не добавляйте поля для данных, которые пользователь может указать в Личном кабинете, после установки приложения.
       example: Пример значения
+
+
 authorizeFormData:
   type: object
   required:
@@ -54,6 +56,8 @@ authorizeFormData:
       example: superpassword
     customField:
       $ref: '#/registerFormData/properties/customField'
+
+
 trialStarted:
   type: object
   properties:
@@ -88,41 +92,43 @@ trialStarted:
           description: Код тарифа, для которого активирован пробный период.
           pattern: '^[a-zA-Z0-9\_\-]+$'
           example: starter
-subscriptionCreated:
+
+
+SubscriptionCreated:
   description: Подписка создана.
   allOf:
     - $ref: '#/events'
-    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/subscriptionCreated
-subscriptionActivated:
+    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/SubscriptionCreated
+
+
+SubscriptionActivated:
   description: Подписка активирована.
   allOf:
     - $ref: '#/events'
-    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/subscriptionActivated
-subscriptionInvoiced:
+    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/SubscriptionActivated
+
+
+SubscriptionRenewed:
   description: Подписка создана.
   allOf:
     - $ref: '#/events'
-    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/subscriptionInvoiced
-subscriptionRenewed:
+    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/SubscriptionRenewed
+
+
+SubscriptionCancelled:
   description: Подписка создана.
   allOf:
     - $ref: '#/events'
-    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/subscriptionRenewed
-subscriptionCanceled:
+    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/SubscriptionCancelled
+
+
+SubscriptionTermsChanged:
   description: Подписка создана.
   allOf:
     - $ref: '#/events'
-    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/subscriptionCanceled
-subscriptionPlanChanged:
-  description: Подписка создана.
-  allOf:
-    - $ref: '#/events'
-    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/subscriptionPlanChanged
-subscriptionDeviceNumberChanged:
-  description: Подписка создана.
-  allOf:
-    - $ref: '#/events'
-    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/subscriptionDeviceNumberChanged
+    - $ref: ./evotorCallbacks/subscriptionEventsDefinitions.yaml#/SubscriptionTermsChanged
+
+
 product:
   type: object
   required:
@@ -295,6 +301,102 @@ product:
       description: >-
         Дополнительные атрибуты товара, не входящие в стандартную схему; не
         может быть null
+
+
+productSchema:
+  type: object
+  required:
+      - uuid
+      - appId
+      - items
+  properties:
+    uuid:
+      type: string
+      description: |
+        Идентификатор схемы в магазине (uuid4). Не может содержать пустую строку или принимать значение `null`.
+      pattern: |
+        ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+    appId:
+      type: string
+      description: |
+        Идентификатор приложения в Эвоторе (uuid4). Не может быть `null` или пустой строкой.
+      pattern: |
+          ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+    items:
+      type: array
+      desctiption: Массив полей схемы.
+      items:
+        type: object
+        properties:
+          title:
+            type: string
+            description: Заголовок поля.
+          editable:
+            type: boolean
+            description: Флажок, который включает или выключает возможность редактировать поле.
+            example: false
+          regexp:
+            type: string
+            description: Валидное регулярное выражение.
+            example: '\\w+'
+          uuid:
+            type: string
+            description: Идентификатор поля в формате uuid4.
+          type:
+            type: string
+            description: Тип поля.
+            example: 'TEXT_FIELD'
+          data:
+            type: object
+            description: Валидный JSON-объект с произвольными данными, доступными на терминале из JavaScript.
+
+productExtras:
+  type: array
+  items:
+    type: object
+    properties:
+      uuid:
+        type: string
+        description: |
+          Идентификатор дополнительного поля (uuid4). Не может быть `null` или пустой строкой.
+        pattern: >-
+          ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+      appId:
+        type: string
+        description: |
+          Идентификатор приложения в Эвоторе (uuid4). Не может быть `null` или пустой строкой.
+        pattern: |
+          ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+      key:
+        type: object
+        properties:
+          uuid:
+            type: string
+            description: |
+              Идентификатор товара, связанного с дополнительным полем (uuid4). Не может быть `null` или пустой строкой.
+            pattern: >-
+              ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+      scheme:
+        type: object
+        description: |
+          Поля, необходимые для отображения дополнительного поля в соответствующем элементе управления смарт-терминала.
+
+          Объект отсутствует, если смарт-терминал не отображает дополнительные поля.
+        properties:
+          value:
+            type: string
+            description: Значение, которое будет отображаться в элеменменте управления.
+          fieldId:
+            type: string
+            description: |
+              Идентификатор поля из схемы (uuid4). Не может быть `null` или пустой строкой.
+            pattern: >-
+              ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+      data:
+        type: object
+        description: Валидный JSON-объект, который содержит данные, отображаемые с помощью JavaScript в интерфейсе смарт-терминала.
+
+
 employee:
   type: object
   required:
@@ -343,6 +445,8 @@ employee:
         - ADMIN
         - CASHIER
         - OTHER
+
+
 store:
   type: object
   required:
@@ -393,6 +497,8 @@ document:
       type: array
       items:
         $ref: '#/transaction'
+
+
 transaction:
   type: object
   properties:
@@ -418,6 +524,8 @@ transaction:
         - FPRINT_Z_REPORT
         - POSITION_TAX
         - REVALUATION
+
+
 device:
   type: object
   properties:
@@ -436,6 +544,8 @@ device:
         Уникальный идентификатор магазина в платформе Эвотор, к которому привязан смарт-терминал. Формат идентификатора - uuid4. Не может содержать пустую строку или принимать значение `null`.
       pattern: >-
         ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+
+
 commodity:
   type: object
   properties:
@@ -462,6 +572,8 @@ commodity:
     measure:
       type: string
       description: Единицы измерения.
+
+
 receipt:
   type: object
   required:
@@ -579,12 +691,16 @@ receipt:
       type: object
       description: |
         Дополнительные поля. Нпример, поля пользователей программ лояльности. Поля передаются только в те сторонние сервисы, где они были созданы.
+
+
 productToDelete:
   type: object
   properties:
     uuid:
       type: string
       description: Уникальный UUID товара в платформе Эвотор.
+
+
 events:
   type: object
   discriminator: type
@@ -592,38 +708,68 @@ events:
     type:
       description: |
         Типы событий:
-          * SubscriptionCreated - новая подписка.
-          * SubscriptionInvoiced - выставлен рекуррентный счет.
-          * SubscriptionActivated - подписка активирована.
-          * SubscriptionRenewed - подписка продлена на следующий период.
-          * SubscriptionCancelled - подписка отменена.
-          * SubscriptionPlanChanged - тариф изменён.
-          * SubscriptionDeviceNumberChanged - измененно количествой устройств, на которые распространяется тариф.
+          * SubscriptionCreated – новая подписка.
+          * SubscriptionActivated – подписка активирована.
+          * SubscriptionRenewed – подписка продлена на следующий период.
+          * SubscriptionCancelled – подписка отменена.
+          * SubscriptionTermsChanged – изменились условия подписки, например, тарифный план или количество устройств.
       type: object
+
+
 userId:
   type: string
-  description: Уникальный идентификатор пользователя в облаке Эвотор.
+  description: Идентификатор пользователя в облаке Эвотор.
   pattern: '^[0-9]{2}-[0-9]{15}$'
   example: 01-000000000000001
+
+
 timestamp:
   type: string
-  format: date-time
+  format: timestamp
   description: Дата и время отправки события.
+  example: 2017-04-18T11:48:26+0000
+
+
 subscriptionId:
   type: string
-  description: Уникальный идентификатор подписки.
-  example: lsdkjfvnkldsfvn
+  description: Идентификатор подписки (uuid4).
+  pattern: ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+  example: a99fbf70-6307-4acc-b61c-741ee9eef6c0
+
+
 planId:
   type: string
-  description: Идентификатор тарифа, который .
-  example: 'exampleTarrif01'
+  description: Идентификатор тарифа, который вы создаёте на портале разработчиков.
+  example: example
+
+
 deviceNumber:
   type: integer
   description:  Идентификатор устройства.
   example: 352398080215959
+
+
 nextBillingDate:
-  type: instant
+  type: OffsetDateTime
   description: Дата следующего платежа.
+  example: 2017-04-18T11:48:26+0000
+
+
 chargedSum:
-  type: money
-  description: Удержанная сумма. До трёх знаков после запятой
+  type: object
+  description: Удержанная сумма. До двух знаков после запятой.
+  properties:
+    amount:
+      type: number
+      description: Значение суммы.
+      example: 2416.67
+    currency:
+      type: string
+      description: Наименование валюты.
+      example: RUB
+
+productId:
+  type: string
+  description: Идентификатор приложения (uuid4).
+  pattern: ^[0-9a-f]{8}-[0-9a-f]{4}-[1-5][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$
+  example: c0d01x35-5193-4cc2-9bfb-be20e0679498
