--- a/evotor-rest-api.yaml
+++ b/evotor-rest-api.yaml
@@ -2,15 +2,25 @@ swagger: '2.0'
 info:
   $ref: ./evotorRestApi/info.yaml
 tags:
+
   - name: Сущности пользователя Эвотор
     description:
       Запросы информации о магазинах, сотрудниках и смарт-терминалах определённого пользователя платформы Эвотор.
-  - name: Товары и документы
-    description:
-      Запросы информации об определённом магазине (`storeUuid`) пользователя платформы Эвотор.
+
   - name: Вебхуки-запросы
     description:
       Запросы к стороннему сервису. Облако Эвотор ожидает подтверждения этих запросов. Время ожидания -- 10 секунд.
+
+  - name: Товары и документы
+    description: |
+      Запросы общей информации о товарах и документах определённого магазина (`storeUuid`) пользователя платформы Эвотор.
+
+      Запросы для работы со схемами и дополнительными полями товаров смотрите в разделе **Схемы и дополнительные поля товаров**.
+
+  - name: Схемы и дополнительные поля товаров
+    description:
+      Запросы для работы с дополнительными полями и схемами товаров.
+
   - name: Вебхуки-уведомления
     description:
       События, на которые сторонний сервис может подписаться. Облако Эвотор не ожидает ответа на эти события
